fix: table responsiveness on small screens

--- a/course-v2/assets/css/course-home.scss
+++ b/course-v2/assets/css/course-home.scss
@@ -1,7 +1,7 @@
 .course-home-page {
   background-color: $light-gray;
 
-  .course-home-content {
+  #course-main-content {
     max-width: $max-content-width;
     margin: 0 auto;
     padding: 1.5rem 2.5rem 4rem 2.5rem !important;
