--- a/course-v2/assets/css/tables.scss
+++ b/course-v2/assets/css/tables.scss
@@ -40,7 +40,7 @@
   }
 }
 
-#main-content table:not(#course-info-table) {
+#course-main-content table:not(#course-info-table) {
   thead th,
   td {
     vertical-align: middle !important;
